# osm-python-readers-benchmark

./: .gitignore  README.md  github_actions_benchmark_log.txt  github_actions_benchmark_results.csv  main.py  pyproject.toml
.github/workflows/: run_workflows.yml
benchmark/: geofabrik_filter.py  monitoring.py  osmium_handler.py  read_tags.py  run_benchmarks.py
benchmark/tasks/all_data/: esy_osmshape.py  osmium.py  osmnx.py  pydriosm.py  pyrosm.py  quackosm.py
benchmark/tasks/buildings_only/: esy_osmshape.py  osmium.py  osmnx.py  pyrosm.py  quackosm.py
benchmark/tasks/filtered_data/: esy_osmshape.py  osmium.py  osmnx.py  pyrosm.py  quackosm.py
benchmark/tasks/highways_only/: esy_osmshape.py  osmium.py  osmnx.py  pyrosm.py  quackosm.py
